--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
 
+  <!-- Lesson 1 -->
   <!-- Heading -->
   <!-- <h1>This is <span>Programming.</span></h1>
   <h2>This is Great.</h2>
@@ -17,7 +18,8 @@
 
   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, harum.</p> -->
 
-  <p>Hello This is Maha and Fatma</p>
+  
+  <!-- <p>Hello This is Maha and Fatma</p>
   <p>Hello This is Ahmed</p>
 
   <span>Hello This is Span</span>
@@ -26,7 +28,63 @@
 
 
   <h1>This is <span>Programming</span> and it's great.</h1>
-  <p>This is <span>Programming</span> and it's great.</p>
+  <p>This is <span>Programming</span> and it's great.</p> -->
+
+  <!-- Lesson 2 -->
+  
+  <!-- Images -->
+  <!-- <img src="./images/tree.avif" alt="Tree on the mountain with sun rise" width="250"> -->
+
+  <a href="./about.html">About Page</a>
+
+  <br>
+  <br>
+
+  <a href="./pages/inner.html">Inner Page</a>
+
+  <br>
+  <br>
+
+  <!-- Hyperlink -->
+  <a href="https://www.google.com" target="_blank">Google</a>
+
+  <img src="./images/insta.png" alt="Instagram Logo" >
+
+  <a href="https://www.instagram.com" target="_blank">
+    <img src="./images/insta.png" alt="insta logo">
+  </a>
+
+
+  <!-- List -->
+  <ol>
+    <li>
+      <a href="https://www.instagram.com" target="_blank">
+        <img src="./images/insta.png" width="50" alt="insta logo">
+      </a>
+    </li>
+    <li>
+      <a href="https://www.instagram.com" target="_blank">
+        <img src="./images/insta.png" width="50" alt="insta logo">
+      </a>
+    </li>
+    <li>
+      <a href="https://www.instagram.com" target="_blank">
+        <img src="./images/insta.png" width="50" alt="insta logo">
+      </a>
+    </li>
+    <li>
+      <a href="https://www.instagram.com" target="_blank">
+        <img src="./images/insta.png" width="50" alt="insta logo">
+      </a>
+    </li>
+  </ol>
+
+  <ul>
+    <li>Fav Subject</li>
+    <li>Fav Subject</li>
+    <li>Fav Subject</li>
+    <li>Fav Subject</li>
+  </ul>
 
 </body>
 </html>
